数据库配置

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=8000
+
+spring.datasource.url = jdbc:mysql://localhost:3306/dbindex?characterEncoding=UTF-8
+spring.datasource.username = root
+spring.datasource.password = root
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
